src/objects/Trade_Ally_License__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Trade Ally Licenses</relationshipLabel>
        <relationshipName>Trade_Ally_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <referenceTo>License__c</referenceTo>
        <relationshipLabel>Trade Ally Licenses</relationshipLabel>
        <relationshipName>Trade_Ally_Licenses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trade_Ally__c</fullName>
        <label>Trade Ally</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Trade Ally.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trade Ally</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Ally Licenses</relationshipLabel>
        <relationshipName>Trade_Ally_Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Trade Ally License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>License__c</columns>
        <columns>Trade_Ally__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TALN-{000000}</displayFormat>
        <label>Trade Ally License Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Ally Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>